project(psd VERSION ${TacentVersion})

list (APPEND src
	adjustment.c
	bevel_emboss.c
	bitmap.c
	blend.c
	boundary.c
	brightness_contrast.c
	channel_image.c
	channel_mixer.c
	color_balance.c
	color_mode.c
	color_overlay.c
	color.c
	curves.c
	descriptor.c
	drop_shadow.c
	effects.c
	file_header.c
	fixed.c
	gaussian_blur.c
	gradient_blend.c
	gradient_fill.c
	gradient_map.c
	gradient_overlay.c
	hue_saturation.c
	image_data.c
	image_resource.c
	inner_glow.c
	inner_shadow.c
	invert.c
	layer_mask.c
	levels.c
	outer_glow.c
	path.c
	pattern_fill.c
	pattern_overlay.c
	pattern.c
	photo_filter.c
	posterize.c
	psd_system.c
	psd_zip.c
	psd.c
	rect.c
	satin.c
	selective_color.c
	solid_color.c
	stream.c
	stroke.c
	threshold.c
	thumbnail.c
	type_tool.c
	libpsd.h
	psd_bitmap.h
	psd_blend.h
	psd_color.h
	psd_config.h
	psd_descriptor.h
	psd_fixed.h
	psd_gradient.h
	psd_math.h
	psd_rect.h
	psd_stream.h
	psd_system.h
	psd_types.h
)

find_package(Properties REQUIRED)
